Update of README and small bugfixes, deleted OldFunctions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,11 @@ export(
 	summarizeModel,
 	zerocross,
 	iterate,
-	iterateDiscard,
-	iterateSplit,
-	autoSplit,
+	#iterateDiscard,
+	#iterateSplit,
+	#autoSplit,
 	multiSplit,
-	testSplits,
+	#testSplits,
 	makeStart,
 	calcSolution,
 	swaleEEG,
